--- a/scss/partials/_colors.scss
+++ b/scss/partials/_colors.scss
@@ -8,8 +8,10 @@ $grayBlue: #678699;
 $gray: #4f4f4f;
 $darkGray: #3b3a3a;
 $lightGray: #525252;
-$textGray: #585858;
+$textGray: #888686;
 $white: #ffffff;
 $black: #000;
 $orange: #f36c00;
+$orangeHover: #cc5b00;
 $blue: #1c85bd;
+$blueHover: #176d9b;
