--- a/scss/elements/_header.scss
+++ b/scss/elements/_header.scss
@@ -154,17 +154,114 @@ header {
 
 #joinNowModal {
 
-    .birthday_select {
+    .modal-dialog {
+        max-width: 600px;
 
-        .input-group-addon {
-            width: 32%;
-            margin-right: 2%;
-
-            &:last-child {
-                margin-right: 0;
-            }
+        .modal-content {
+            padding: 20px;
         }
     }
 
+    .modal-header {
+        display: block !important;
+        border-bottom: none;
+
+        .modal-title {
+            @include span-columns(12);
+            @include opensansreg;
+            color: $blue;
+            font-size: 24px;
+        }
+
+        p {
+            @include span-columns(12);
+            @include opensansreg;
+            font-size: 14px;
+            color: $textGray;
+        }
+    }
+
+    .close {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+
+        @include media($mobile) {
+            top: -14px;
+            right: -14px;
+        }
+    }
+
+    form {
+
+        label {
+            color: $textGray;
+            @include opensanssemibold;
+            font-size: 14px;
+
+            @include media($mobile) {
+                font-size: 12px;
+            }
+
+            sup {
+                color: $red;
+            }
+        }
+        
+        input {
+            height: 40px;
+            border-color: #dcdbdb;
+            -webkit-border-radius: 4px;
+            -moz-border-radius: 4px;
+            border-radius: 4px;
+
+            @include media($mobile) {
+                height: 35px;
+            }
+        }
+
+        select {
+            height: 40px;
+            border-color: #dcdbdb;
+            -webkit-border-radius: 4px;
+            -moz-border-radius: 4px;
+            border-radius: 4px;
+
+            @include media($mobile) {
+                height: 35px;
+            }
+
+            &:after {
+                content: '';
+                background: url('../images/triangle-down.png') no-repeat;
+                width: 20px;
+                height: 20px;
+                position: absolute;
+                right: 10px;
+            }
+        }
+
+        .birthday_select {
+
+            .input-group-addon {
+                width: 32%;
+                margin-right: 2%;
+
+                &:last-child {
+                    margin-right: 0;
+                }
+            }
+        }
+
+        .form-check-label {
+            margin-left: 10px;
+            font-size: 12px;
+            padding-top: 12px;
+
+            @include media($mobile) {
+                font-size: 10px;
+            }
+        }
+    }
 }
 
