--- a/scss/partials/_colors.scss
+++ b/scss/partials/_colors.scss
@@ -7,7 +7,8 @@ $grayBlue: #678699;
 
 $gray: #4f4f4f;
 $darkGray: #3b3a3a;
-$lightGray: #525252;
+$lighterGray: #525252;
+$lightGray: #efefef;
 $textGray: #888686;
 $white: #ffffff;
 $black: #000;
@@ -16,3 +17,4 @@ $orangeHover: #cc5b00;
 $blue: #1c85bd;
 $blueHover: #176d9b;
 $red: #f53b3b;
+$yellow: #ffff33;
