--- a/scss/partials/_base.scss
+++ b/scss/partials/_base.scss
@@ -33,26 +33,27 @@ body {
 	}
 }
 
+.container {
+    max-width: 1240px;
+
+    @include media($desktop) {
+        max-width: 990px;
+    }
+
+    @include media($tablet) {
+        max-width: 780px;
+    }
+}
+
 .page_wrapper {
-    min-height: 100%;
+    padding: 80px 0;
 
-    &.user_dash {
+    @include media($mobile) {
+        padding: 40px 0;
+    }
 
-        @include media($tablet) {
-            min-height: unset;
-        }
-
-        .main_content {
-            padding: 40px 60px 20px 40px;
-
-            @include media($mobile) {
-                padding: 5% 8% 20%;
-            }
-
-            @include media($smallMobile) {
-                overflow-y: scroll;
-            }
-        }
+    .section {
+        margin-top: 20px;
     }
 }
 
@@ -80,23 +81,6 @@ img {
 	float: left;
 }
 
-.image_wrap.fixed {
-    width: 60px;
-    height: 60px;
-    overflow: hidden;
-    padding: 0;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    border-radius: 50%;
-    flex: none;
-    -ms-flex: none;
-}
-
-.sidebar {
-    min-height: 100%;
-    z-index: 1;
-    min-width: 300px;
-}
 
 .btn {
     padding: 6px 20px;
@@ -143,34 +127,197 @@ img {
             background: $orangeHover;
         }
     }
+
+    &.gray {
+        color: $white;
+        background: $darkGray;
+
+        &:hover {
+            background: $lighterGray;
+        }
+    }
 }
 
-.select.triangle_right {
-    &:after {
-        content: '';
-        background: url('../images/icon-triangle-right.png') no-repeat;
+.modal {
+
+    a {
+        color: $blue;
+
+        &:hover {
+            color: $blueHover;
+        }
+    }
+
+    .modal-dialog {
+        max-width: 600px;
+
+        .modal-content {
+            padding: 20px;
+        }
+    }
+
+    .modal-header {
+        display: block !important;
+        border-bottom: none;
+
+        .modal-title {
+            @include span-columns(12);
+            @include opensansreg;
+            color: $blue;
+            font-size: 24px;
+        }
+
+        p {
+            @include span-columns(12);
+            @include opensansreg;
+            font-size: 14px;
+            color: $textGray;
+        }
+    }
+
+    .close {
         position: absolute;
-        right: 20px;
-        top: 42px;
-        width: 9px;
-        height: 14px;
-        background-size: 100%;
+        top: 10px;
+        right: 10px;
+
+        @include media($mobile) {
+            top: -14px;
+            right: -14px;
+        }
     }
 }
 
-select {
-    -webkit-appearance: none;
-    border: 1px solid $gray;
-    height: 40px;
-    background: $white;
-    color: $textGray;
-
-    &:focus {
-        outline: none;
+.banner {
+    img {
+        @include media($mobile) {
+            max-width: 100px;
+            float: none;
+        }
     }
 }
 
-.form-check-label {
-    margin-left: 6%;
-    padding-top: 4px;
+form {
+
+    h3 {
+        color: $blue;
+        font-size: 20px;
+        margin-bottom: 15px;
+
+        @include media($mobile) {
+            font-size: 18px;
+        }
+    }
+
+    p {
+        @include opensanssemibold;
+        margin-bottom: 15px;
+        font-size: 14px;
+
+        @include media($mobile) {
+            font-size: 12px;
+        }
+    }
+
+    h4 {
+        @include opensansbold;
+        color: $darkGray;
+        font-size: 18px;
+        margin-bottom: 20px;
+
+        @include media($mobile) {
+            font-size: 16px;
+        }
+    }
+
+    label {
+        color: $textGray;
+        @include opensanssemibold;
+        font-size: 16px;
+
+        @include media($mobile) {
+            font-size: 12px;
+        }
+
+        sup {
+            color: $red;
+        }
+    }
+
+    .form-control {
+        height: 40px;
+        font-size: 16px;
+        border-color: #dcdbdb;
+        -webkit-border-radius: 4px;
+        -moz-border-radius: 4px;
+        border-radius: 4px;
+        -webkit-box-shadow: 1px 2px 6px 0px rgba(224,224,224,1);
+        -moz-box-shadow: 1px 2px 6px 0px rgba(224,224,224,1);
+        box-shadow: 1px 2px 6px 0px rgba(224,224,224,1);
+
+        @include media($mobile) {
+            height: 35px;
+        }
+    }
+
+    select {
+        -webkit-appearance: none;
+        height: 40px;
+        border-color: #dcdbdb;
+        -webkit-border-radius: 4px;
+        -moz-border-radius: 4px;
+        border-radius: 4px;
+
+        @include media($mobile) {
+            height: 35px;
+        }
+    }
+    .birthday_select {
+
+        .input-group-addon {
+            width: 32%;
+            margin-right: 2%;
+
+            &:last-child {
+                margin-right: 0;
+            }
+
+            &:after {
+                content: '';
+                background: url('../images/triangle-down.png') no-repeat;
+                width: 10px;
+                height: 10px;
+                position: absolute;
+                right: 8px;
+                top: 16px;
+                background-size: 100%;
+            }
+        }
+    }
+
+    .gender {
+        &:after {
+            content: '';
+            background: url('../images/triangle-down.png') no-repeat;
+            width: 10px;
+            height: 10px;
+            position: absolute;
+            right: 15px;
+            top: 45px;
+            background-size: 100%;
+        }
+    }
+
+    .form-check {
+        margin-top: 10px;
+
+        .form-check-label {
+            margin-left: 10px;
+            font-size: 12px;
+            padding-top: 0;
+
+            @include media($mobile) {
+                font-size: 10px;
+            }
+        }
+    }
 }
